--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,10 +12,13 @@
  $fontOleo: "Oleo Script Swash Caps";
  //шрифт Montserrat 
  $fontMontserrat: "Montserrat";
+//шрифт inconsolata 
+$fontIncosolata: "Incosolata";
  //основой цвет текста приложения 
  $textColor: #222222; 
  //размер заголовка секции
  $sectionTitleSize: 24px;
+ 
 
 
 
