--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,63 @@ body {
   font-weight: 400;
   line-height: normal;
 }
+
+.concept-and-background__title {
+  color: #222222;
+  font-family: "Montserrat";
+  font-weight: 500;
+  font-size: 24px;
+}
+.concept-and-background__text {
+  color: #222222;
+  text-align: justify;
+  font-family: "Montserrat";
+  font-size: 16px;
+}
+
+.typography-og-color-palette__title {
+  color: #222222;
+  font-family: "Montserrat";
+  font-weight: 500;
+  font-size: 24px;
+  margin-bottom: 21px;
+}
+.typography-og-color-palette__fonts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 49px;
+}
+.typography-og-color-palette__font_oleo {
+  color: #222222;
+  font-size: 28px;
+  font-family: "Oleo Script Swash Caps";
+}
+.typography-og-color-palette__font_inconsolata {
+  color: #222222;
+  font-size: 28px;
+  font-family: "Incosolata";
+}
+.typography-og-color-palette__text {
+  color: #222222;
+  text-align: justify;
+  font-family: "Montserrat";
+  font-size: 16px;
+  margin-bottom: 33px;
+}
+.typography-og-color-palette_colors {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.color_circle {
+  width: 79.6px;
+  height: 79.6px;
+  border-radius: 50%;
+}
