--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -13,7 +13,7 @@
  //шрифт Montserrat 
  $fontMontserrat: "Montserrat";
 //шрифт inconsolata 
-$fontIncosolata: "Incosolata";
+$fontInconsolata: "Inconsolata";
  //основой цвет текста приложения 
  $textColor: #222222; 
  //размер заголовка секции
